[package]
name = "nutils-poly-py"
version = "1.0.0"
authors = ["Evalf <info@evalf.com>"]
edition = "2021"
rust-version = "1.65"
license = "MIT"
repository = "https://github.com/nutils/poly-py"

[lib]
name = "nutils_poly"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15"
numpy = "0.17"
nutils-poly = { git = "https://github.com/nutils/poly-rs.git", branch = "introduce-poly" }
pyo3 = { version = "0.17", features = ["extension-module", "abi3-py37"] }
sha1 = "0.10.5"
sqnc = { git = "https://github.com/evalf/sqnc.git", branch = "introduce-sqnc", features = ["ndarray"] }
